--- a/day5/index.css
+++ b/day5/index.css
@@ -12,7 +12,7 @@ h1.col-red{
     background-repeat:repeat-x;
     width: 80%;
     height:20vh;
-    background-image: url(../assets/awdiz.assets.jpeg);
+    background-image: url(../assets/images.jpg);
 }
 .borderstyles{
     border: 4px solid red ;
