--- a/day 10/style.css
+++ b/day 10/style.css
@@ -1,19 +1,24 @@
 *{
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  box-sizing: content-box;
+  font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+      Helvetica, Arial, sans-serif;
+
 }
 
 .screen{
   height: 600px;
   width: 100%;
-  border: 4px solid palevioletred;
+  /* border: 4px solid palevioletred; */
 }
 .navbar{
   height: 80px;
   width: 93%;
   margin: auto;
-  border: 2px solid black;
+  border: 2px solid #bfbfbf;
+  background-color: white;
+  box-shadow: 10px 10px 5px #aaaaaa;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -121,3 +126,7 @@
   color: black;
   opacity: 0.7;
 }
+#overviewTitle {
+  display: none;
+}
+
